[package]
name = "firebase-messaging-rs"
version = "0.8.11"
authors = [
  "Yoichiro ITO <contact.110416@gmail.com>"
]
rust-version = "1.63"
description = "An API to talk to FCM (Firebase Cloud Messaging) in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/i10416/firebase-messaging-rs"
repository = "https://github.com/i10416/firebase-messaging-rs"
documentation = "https://docs.rs/firebase-messaging-rs/"
keywords = ["fcm", "firebase", "notification"]
edition = "2021"
readme = "README.md"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["topic-management", "native-tls"]
fcm = []
topic-management = []
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls"]
vendored-tls = ["hyper-tls/vendored"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
chrono = "0.4"
log = "0.4"
gcloud-sdk = { version = "0.25", features = ["rest"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-tls = { version = "0.6", optional = true }
hyper-util = "0.1"
hyper-rustls = { version = "0.27", optional = true, features = ["rustls-native-certs"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
